<resources>
    <string name="app_name">Movee Time</string>
    <string name="app_package_name">com.eylulcan.moviefragment</string>
    <string name="list_to_detail_transition">ListDetailTransition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movieImage">TODO</string>
    <string name="movie_info">Movie Info</string>
    <string name="movie_name">Movie Name</string>
    <string name="avengers">Avengers</string>
    <string name="titanic">Titanic</string>
    <string name="harry_potter">Harry Potter and Chamber of Secrets</string>
    <string name="interstellar">Interstellar</string>
    <string name="avengers_info">Avengers Info Text</string>
    <string name="titanic_info">Titanic Info Text</string>
    <string name="movie">movie</string>
    <string name="interstellar_info">Interstellar Info Text</string>
    <string name="harry_potter_info">Harry Potter and Chamber of Secrets Info Text</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_e_mail">Enter E-Mail</string>
    <string name="logo">logo</string>
    <string name="sign_in">Sıgn In</string>
    <string name="sign_up">Sıgn Up</string>
    <string name="login_transition">LoginTransition</string>
    <string name="or">OR</string>
    <string name="empty_field">No empty field allowed please fill all the areas</string>
    <string name="user_email">User Email</string>
    <string name="users">Users</string>
    <string name="user_created">Logged In</string>
    <string name="logged_out_movie_list">Logged Out</string>
    <string name="menu_log_out">Log Out</string>
    <string name="logged_out_movie_detail">Logged Out</string>
    <string name="login_log_message_firebase_auth">firebaseAuthWithGoogle</string>
    <string name="login_log_message_failed">Google sign in failed</string>
    <string name="login_log_message_sign_in_success">signInWithCredential:success</string>
    <string name="login_log_message_sign_in_fail">signInWithCredential:failure</string>
    <string name="splash_image_content_description">Splash Logo </string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="onboard_title"><![CDATA[Movies & Series]]></string>
    <string name="onboard_info_text">The world\'s most popular and authoritative source for movies and series</string>
    <string name="explore_collection">Explore Collection</string>
    <string name="discover">Discover</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <string name="search">Search</string>
    <string name="back_button">Back Button</string>
    <string name="artist_cover_image">Artist Cover Image</string>
    <string name="summary">Summary</string>
    <string name="movies">Movies</string>
    <string name="more">More</string>
    <string name="artistId">artistId</string>
    <string name="movieId">movieId</string>
    <string name="photos">Photos</string>
    <string name="unknown">Unknown</string>
    <string name="preview_image">Preview Image</string>
    <string name="artist_image">Artist Image</string>
    <string name="photo_album">photoAlbum</string>
    <string name="image_url">ImageUrl</string>
    <string name="language">Language: %1$s</string>
    <string name="cast">Cast</string>
    <string name="reviews">Reviews</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="youtube">YouTube</string>
    <string name="vimeo">Vimeo</string>
    <string name="duration">%1$dh %2$dmin</string>
    <string name="author_profile_image">Author Profile Image</string>
    <string name="expand_button">Expand Button</string>
    <string name="noInfo">There is no information about this person.</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="now_playing">Now Playing</string>
    <string name="watch_later">Watch Later</string>
    <string name="rate">Rate</string>
    <string name="rateMovie">Do you want to rate the movie?</string>
    <string name="cancel">Cancel</string>
    <string name="sessionId">sessionId</string>
    <string name="rate_movie">Rate Movie</string>
    <string name="imageButton">imageButton</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="onboardimage">onBoardImage</string>
    <string name="search_fragment_image">Search Fragment Image</string>
    <string name="genreId">genreId</string>
    <string name="isFirst">isFirst</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="vote">Vote</string>
    <string name="as">as</string>
    <string name="known_for">Known For</string>
    <string name="more_detail">More Detail</string>
    <string name="biography">Biography</string>
    <string name="born">Born</string>
    <string name="death">Death</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="id">id</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="posterPath">posterPath</string>
    <string name="lastVisited">Last Visited Movies</string>
    <string name="notFoundMovie">No such movie found!</string>
    <string name="no_review_found">No Review Found</string>
    <string name="ratingSend">We received your rating!</string>
    <string name="no_cast_information_found">No Cast Information Found</string>
    <string name="no_suggestion_found">No Suggestion Found</string>
    <string name="fyi">FYI</string>
</resources>