<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_user_email_margin_start"
        android:layout_marginTop="@dimen/login_user_email_margin_top"
        android:layout_marginEnd="@dimen/login_user_email_margin_end"
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textMultiLine|textPersonName|text|textImeMultiLine|textEmailSubject"
        android:minHeight="@dimen/login_user_email_min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="@dimen/login_movie_image_width"
        android:layout_height="@dimen/login_movie_image_height"
        android:layout_marginTop="@dimen/login_movie_image_margin_top"
        android:contentDescription="@string/logo"
        android:src="@drawable/movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:transitionName="@string/login_transition"/>

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_user_password_margin_top"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textMultiLine|textPassword|textImeMultiLine"
        android:minHeight="@dimen/login_user_password_min_height"
        app:layout_constraintEnd_toEndOf="@+id/userEmail"
        app:layout_constraintStart_toStartOf="@+id/userEmail"
        app:layout_constraintTop_toBottomOf="@+id/userEmail"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_sign_in_button_margin_start"
        android:layout_marginTop="@dimen/login_sign_in_button_margin_top"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toStartOf="@+id/signUpButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_sign_up_button_margin_top"
        android:layout_marginEnd="@dimen/login_sign_up_button_margin_end"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/googleSignInButton"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />
</androidx.constraintlayout.widget.ConstraintLayout>