<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recyclerRowConstraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/movieList_rowLayout_marginStart"
    android:layout_marginEnd="@dimen/movieList_rowLayout_marginEnd">

    <ImageView
        android:id="@+id/movieListRecyclerViewImage"
        android:layout_width="@dimen/recycler_row_image_width"
        android:layout_height="@dimen/recycler_row_image_height"
        android:layout_marginTop="@dimen/recycler_row_image_marginTop"
        android:contentDescription="@string/movieImage"
        app:layout_constraintDimensionRatio="16:9"
        android:transitionName="@string/list_to_detail_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieListRecyclerViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/recycler_row_text_margin"
        android:layout_marginStart="@dimen/recycler_row_text_margin"
        android:layout_marginBottom="@dimen/recycler_row_text_margin"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/movie_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="@dimen/movie_list_recycler_view_name_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/movieListRecyclerViewImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/movieListRecyclerViewImage"
        app:layout_constraintTop_toBottomOf="@+id/movieListRecyclerViewImage"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/white"
        android:minHeight="@dimen/movie_list_recycler_view_name_min_height"/>
</androidx.constraintlayout.widget.ConstraintLayout>