<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailFragment">

    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:layout_marginStart="@dimen/margin_size_16"
        android:layout_marginTop="@dimen/margin_size_24"
        android:layout_marginEnd="@dimen/margin_size_16"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/movieImage" />

    <TextView
        android:id="@+id/movieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_16"
        android:layout_marginTop="@dimen/margin_size_16"
        android:layout_marginEnd="@dimen/margin_size_16"
        android:gravity="center"
        android:inputType="textMultiLine|textImeMultiLine"
        android:text="@string/movie_name"
        android:textSize="@dimen/font_size_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieImage"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/movieInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_size_16"
        android:layout_marginTop="@dimen/margin_size_16"
        android:layout_marginEnd="@dimen/margin_size_16"
        android:layout_marginBottom="@dimen/margin_size_16"
        android:inputType="textMultiLine|textImeMultiLine"
        android:text="@string/movie_info"
        android:textSize="@dimen/font_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieName" />
</androidx.constraintlayout.widget.ConstraintLayout>