<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboard.OnboardFragment"
    android:id="@+id/onboard_constraint_layout">

    <ImageView
        android:id="@+id/onboardBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@tools:sample/avatars" />
    <TextView
        android:id="@+id/onboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/onboard_title_marginBottom"
        android:gravity="center"
        android:text="@string/onboard_title"
        android:textColor="@color/white"
        android:textSize="@dimen/onboard_title_size"
        app:layout_constraintBottom_toTopOf="@+id/onboard_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/onboard_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/onboard_info_marginStart"
        android:layout_marginEnd="@dimen/onboard_info_margiEnd"
        android:layout_marginBottom="@dimen/onboard_info_marginBottom"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/onboard_info_text"
        android:textColor="@color/white"
        android:textSize="@dimen/onboard_info_size"
        app:layout_constraintBottom_toTopOf="@+id/onboardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/onboardButton"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/onboard_button_height"
        android:layout_marginStart="@dimen/onboard_button_marginStart"
        android:layout_marginEnd="@dimen/onboard_button_marginEnd"
        android:layout_marginBottom="@dimen/onboard_button_marginBottom"
        android:backgroundTint="@color/teal_700"
        android:text="@string/explore_collection"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
        app:iconGravity="textEnd"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>